[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://src/scenes/MainMenu.gd" id=1]
[ext_resource type="PackedScene" path="res://src/visual/BackgroundController.tscn" id=2]
[ext_resource type="Script" path="res://src/ui/GlassPanel.gd" id=3]
[ext_resource type="Theme" path="res://src/ui/UiTheme.tres" id=4]
[ext_resource type="Script" path="res://src/ui/LiquidGlassButton.gd" id=5]

[node name="MainMenu" type="Control"]
theme = ExtResource( 4 )
script = ExtResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BackgroundController" parent="." instance=ExtResource( 2 )]

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="ColorRect" parent="UI"]
script = ExtResource( 3 )
anchor_left = 0.12
anchor_top = 0.2
anchor_right = 0.88
anchor_bottom = 0.8
blur_radius = 5.2
tint = Color(0.12, 0.18, 0.32, 0.22)
edge = Color(0.9, 0.96, 1, 0.2)
corner_radius = 0.11
edge_width = 1.1
warp_intensity = 0.12
strength_x = 8.0
strength_y = 8.0
chromatic_strength = 0.18
color = Color(0.12, 0.18, 0.32, 0.22)

[node name="VBox" type="VBoxContainer" parent="UI"]
anchor_left = 0.15
anchor_top = 0.21
anchor_right = 0.85
anchor_bottom = 0.79
alignment = 1
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="UI/VBox"]
text = "Color Crunch"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 78

[node name="Subtitle" type="Label" parent="UI/VBox"]
visible = false
text = "Swipe to crunch matching colors"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32

[node name="TrackLabel" type="Label" parent="UI/VBox"]
text = "Track"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 28

[node name="TrackCarousel" type="HBoxContainer" parent="UI/VBox"]
alignment = 1
theme_override_constants/separation = 14

[node name="TrackPrev" type="Button" parent="UI/VBox/TrackCarousel"]
script = ExtResource( 5 )
text = "<"
custom_minimum_size = Vector2(88, 88)
corner_radius = 0.5

[node name="TrackNameHost" type="Control" parent="UI/VBox/TrackCarousel"]
custom_minimum_size = Vector2(340, 88)
clip_contents = true

[node name="TrackName" type="Label" parent="UI/VBox/TrackCarousel/TrackNameHost"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Track"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TrackNext" type="Button" parent="UI/VBox/TrackCarousel"]
script = ExtResource( 5 )
text = ">"
custom_minimum_size = Vector2(88, 88)
corner_radius = 0.5

[node name="Start" type="Button" parent="UI/VBox"]
script = ExtResource( 5 )
text = "Start"
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 118)

[node name="Account" type="Button" parent="UI"]
script = ExtResource( 5 )
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 44.0
offset_right = -24.0
offset_bottom = 126.0
text = "Account"
corner_radius = 0.38

[node name="Shop" type="Button" parent="UI"]
script = ExtResource( 5 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -264.0
offset_top = -150.0
offset_right = -24.0
offset_bottom = -44.0
text = "Shop"
corner_radius = 0.38

[node name="CoinBadge" type="Label" parent="UI/Shop"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 64.0
offset_top = -42.0
offset_right = 146.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="UI/VBox/TrackCarousel/TrackPrev" to="." method="_on_track_prev_pressed"]
[connection signal="pressed" from="UI/VBox/TrackCarousel/TrackNext" to="." method="_on_track_next_pressed"]
[connection signal="pressed" from="UI/VBox/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="UI/Account" to="." method="_on_account_pressed"]
[connection signal="pressed" from="UI/Shop" to="." method="_on_shop_pressed"]


